--- a/app.json
+++ b/app.json
@@ -9,6 +9,6 @@
         }
     },
     "website": "https://www.qingmei.site/",
-    "repository": "https://github.com/itheshe/heroray",
+    "repository": "https://github.com/itheshe/herorayss",
     "stack": "container"
 }
